# typestate-builder

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: complex.rs  person.rs
src/: lib.rs
typestate-builder-macro/: Cargo.toml  LICENSE-MIT  README.md
typestate-builder-macro/src/: analysis.rs  analyze.rs  analyze2.rs  graph.rs  helper.rs  lib.rs  parse.rs  produce.rs
typestate-builder-macro/src/analysis/: element.rs  relation.rs
typestate-builder-macro/src/parse/: element.rs  relation.rs
typestate-builder-macro/src/produce/: builder.rs  builder_build_impl.rs  builder_states.rs
