[package]
name = "typestate-builder"
version = "0.1.1"
edition = "2021"
authors = ["Andy Allison <rustacean15@gmail.com>"]
description = "Derive-macro-based generator that combines `Typestate` and `Builder` patterns."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aalowlevel/typestate-builder"
keywords = ["derive", "pattern", "builder", "state", "typestate"]
categories = [
    "typestate",
    "builder",
    "pattern",
    "code-generation",
    "development-tools",
]

[dependencies]
typestate-builder-macro = { path = "./typestate-builder-macro", version = "0.1.0" }
