[package]
name = "typestate-builder"
version = "0.1.3"
edition = "2021"
authors = ["Andy Allison <rustacean15@gmail.com>"]
description = "Derive-macro-based generator that combines `Typestate` and `Builder` patterns."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aalowlevel/typestate-builder"
keywords = ["typestate", "builder", "pattern", "derive", "state"]
categories = ["rust-patterns", "data-structures", "development-tools"]

[dependencies]
typestate-builder-macro = { path = "./typestate-builder-macro", version = "0.1.3" }
