[package]
name = "typestate-builder-macro"
version = "0.1.0"
edition = "2021"
authors = ["Andy Allison <rustacean15@gmail.com>"]
description = "Derive-macro-based generator that combines `Typestate` and `Builder` patterns."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aalowlevel/typestate-builder"
keywords = [
    "rust",
    "derive",
    "pattern",
    "macro",
    "builder",
    "state",
    "typestate",
]
categories = ["pattern", "code-generation", "development-tools"]

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
titlecase = "3.3.0"

[lib]
proc-macro = true
