[package]
name = "typestate-builder-macro"
version = "0.1.3"
edition = "2021"
authors = ["Andy Allison <rustacean15@gmail.com>"]
description = "Derive-macro-based generator that combines `Typestate` and `Builder` patterns."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aalowlevel/typestate-builder"
keywords = ["typestate", "builder", "pattern", "derive", "state"]
categories = ["rust-patterns", "data-structures", "development-tools"]

[dependencies]
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
proc-macro-error = "1.0.4"
petgraph = { version = "0.6.5" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
indexmap = "2.5.0"
rand = "0.8.5"

[lib]
proc-macro = true
